# knowledge-graph-language

./: .gitignore  CITATION.cff  LICENSE  README.md  benchmark.py  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  tests.yml
app/: app.py
app/templates/: index.html
kgl/: __init__.py  cli.py  grammar.py  graph.py
test/: fuzz.py  test.py
test/data/: example.csv  example.json  example.tsv  unicode_example.csv
