[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kgl"
authors = [
    "James (capjamesg)"
]
description = "Knowledge Graph Language (KGL) parser."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["knowledge graph", "graphs"]
license = "MIT License"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.1.0"
dynamic = ["version"]
build_editable = true

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.11.3"